Updated LESS to manage images width/height correctly on mobile. Bumped versions

--- a/src/plonemeeting/portal/core/browser/static/less/global.less
+++ b/src/plonemeeting/portal/core/browser/static/less/global.less
@@ -280,7 +280,7 @@ div.decision table {
 
     img {
         width: auto !important;
-        max-width: 100% !important;
+        height: auto !important;
     }
 }
 
